# verified-burst-broker

./: .dockerignore  .gitignore  COMMONS_DESIGN.md  DEMO.md  Dockerfile  INSTALL.md  LANDING.md  PITCH.md  PROOF.md  README.md  SPEC-clearance-v1.md  SPEC-tiered-verifier-v1.md  audit.py  bestprice.py  broker.py  burst.py  clearance.py  demo.py  deploy.sh  env.py  finish_subdomain.sh  flagstore.py  governance_demo.py  guardian.py  hn_autoreply.py  landing.html  ledger.py  mcp_remote.py  mcp_server.py  mcp_smoke.py  measure.py  outside_watch.py  pricing.py  proof_harness.py  provider.py  requirements-live.txt  safebuy.py  security_probe.py  selftest_mainnet.py  server.py  (+15 more)
client/: README.md  pyproject.toml
client/verified_burst/: __init__.py  __main__.py  client.py  guard.py  signing.py
